[package]
name = "force_smith"
version = "0.1.0"
edition = "2024"
authors = ["CodeByPhx CodeByPhx@proton.me"]
description = "Force Smith is a toolkit that makes it easy to implement and develop new force-directed layout algorithms with built-in debugging and visualization capabilities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeByPhx/force_smith"
keywords = ["graph", "layout", "visualization", "force-directed", "algorithm"]
categories = ["graphics", "visualization", "algorithms"]
exclude = ["/target", "/.gitignore", "/.github", "/.idea", "tests/*"]

[features]
default = ["builder", "visualizer", "utils"]
utils = []
builder = []
visualizer = ["bevy", "bevy_egui", "serde_json", "serde"]

[dependencies]
force_smith_macros = "0.1.0"
bevy_math = "0.18.0"
bevy = { version = "0.17.2", optional = true }
bevy_egui = { version = "0.38.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
rand = "0.10.0-rc.5"
