[package]
name = "force_smith"
version = "1.0.0"
edition = "2024"
authors = ["CodeByPhx <CodeByPhx@proton.me>"]
description = "A toolkit for implementing and developing force-directed layout algorithms with built-in debugging and visualization capabilities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeByPhx/force_smith"
keywords = ["graph", "layout", "visualization", "force-directed", "algorithm"]
categories = ["graphics", "visualization", "algorithms"]
exclude = ["/target", "/.gitignore", "/.github", "/.idea", "tests/*"]

[features]
default = ["builder", "utils"]
full = ["builder", "utils", "visualizer"]
utils = []
builder = []
visualizer = ["bevy", "bevy_egui", "serde", "serde_json", "force_smith_macros"]

[dependencies]
bevy_math = "0.18.1"
rand = "0.10.0"

# Optional dependencies for visualizer feature
force_smith_macros = { version = "1.0.0", optional = true }
bevy = { version = "0.18.1", optional = true }
bevy_egui = { version = "0.39.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
